@@ -2,6 +2,7 @@
  - (djm) [loginrec.c] Start KNF and tidy up of this long-neglected file.
    No change in resultant binary
  - (djm) [loginrec.c] __func__ifiy
+ - (djm) [loginrec.c] xmalloc
 
 20040911
  - (djm) [ssh-agent.c] unifdef some cygwin code; ok dtucker@
@@ -1739,4 +1740,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3549 2004/09/12 05:25:17 djm Exp $
+$Id: ChangeLog,v 1.3550 2004/09/12 05:26:00 djm Exp $
